--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "jquery": "^3.6.0",
+    "nodemon": "^2.0.12",
     "stripe": "^8.174.0"
   }
 }
